--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "csv-parser": "3.0.0",
+    "dayjs": "1.11.10",
     "next": "14.0.4",
+    "papaparse": "5.4.1",
     "react": "18",
     "react-dom": "18"
   },
